test2 with char
fasdfasdf

--- a/assets/style.css
+++ b/assets/style.css
@@ -948,6 +948,10 @@ canvas{
          
     }
 
+    .footerTop > p{
+        width: 65ch;
+    }
+
 /* Topical Page Content END //////////////////////*/
 
 /* FUN PAGE START /////////*/
