--- a/assets/style.css
+++ b/assets/style.css
@@ -391,6 +391,10 @@ h3{
     width: 80%;
 }
 
+.h2Acc{
+    color: #fbb51d;
+}
+
 .pAcc {
     font-size: 20px;
     max-width: 70ch;
@@ -568,6 +572,7 @@ h3{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin: 0 auto;
 }
 
 .mazeP{
@@ -589,7 +594,6 @@ h3{
 
     /*position: absolute;*/
     top: 100%;
-    
 
     display: flex; 
     justify-content: center; 
@@ -684,16 +688,29 @@ canvas{
 
 /* MEDIA QUERY START     600px      //////////////////////*/
     @media only screen and (max-width: 600px){
-       
+        
+        html{
+            width: 110%;
+            min-width: 500px;
+        }
+        .fun_body_omega{
+            padding: 0px;
+            margin: 0px;
+        }
 
         h1{
             font-size: 50px;
+            margin: 0 auto;
+            margin-top: 40%;
+
         }
 
         h2{
             font-size: 40px; 
             margin: 1% auto;  
         }
+        
+     
 
         /* NAV BAR START //////////////////////*/
        /*
@@ -722,8 +739,8 @@ canvas{
         .navL > ul > li > a{
             padding: 0px 15px 0px 0;
         }
-        .navL > ul > li > a{
-            border-radius: none;
+        .navL > ul > li{
+            padding: 0px;
         }
         .nav{
             border-radius: 0px;
@@ -985,7 +1002,11 @@ canvas{
 /* FUN PAGE START /////////*/
 
 #randomseed{
-    margin: 0 0 0 50px;
+    margin: 0 0 0 0px;
+}
+@keyframes typing{
+    from {width:0%}
+    to {width:50%}
 }
 /*
 .maze{
